# vSMC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Doxyfile  Doxyfile.in  LICENSE  NEWS.md  README.markdown  README.md  index.html  params.json  user_options_sample.cmake
example/: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.R
example/gmm/: CMakeLists.txt  README.md  gmm_smc_benchmark.R  gmm_smc_cl.cl
example/gmm/include/: gmm.hpp  gmm_init.hpp  gmm_monitor.hpp  gmm_move.hpp  gmm_move_rj.hpp  gmm_options.hpp  gmm_options_cl.hpp  gmm_param.hpp  gmm_proposal.hpp  gmm_ps.hpp  gmm_smc_cl.hpp  gmm_state.hpp
example/gmm/src/: gmm.cpp  gmm_mpi.cpp  gmm_pmcmc.cpp  gmm_ps.cpp  gmm_rjmcmc.cpp  gmm_rjsmc.cpp  gmm_smc.cpp  gmm_smc_cl.cpp  gmm_smc_pair.cpp  gmm_smp.cpp
example/include/: common.hpp  move_alpha.hpp  move_pmcmc.hpp  move_smc.hpp  move_smc_pair.hpp  options_main.hpp  options_pmcmc.hpp  options_process.hpp  options_smc.hpp  pmcmc.hpp  pmcmc_do.hpp  smc.hpp  smc_do.hpp  smc_path.hpp
example/node/: CMakeLists.txt  README.md  node_c.data  node_s.data
example/node/include/: node.hpp  node_init.hpp  node_monitor.hpp  node_move.hpp  node_options.hpp  node_param.hpp  node_proposal.hpp  node_state.hpp
example/node/src/: node_pmcmc.cpp  node_smc.cpp
example/opencl/: CMakeLists.txt
example/opencl/src/: opencl_info.cpp
example/paper/: CMakeLists.txt  paper_gmm.data  paper_pf.R
example/paper/src/: paper_gmm.cpp  paper_gmm_mpi.cpp  paper_pf.cpp
example/pet/: CMakeLists.txt  README.md  pet_conv.R  pet_conv.RData  pet_prior_i.data  pet_prior_n.data  pet_proposal_i.data  pet_real_data.config  pet_simulate.data  pet_simulate_data.config  pet_time.data
example/pet/include/: pet.hpp  pet_data.hpp  pet_init.hpp  pet_monitor.hpp  pet_move.hpp  pet_options.hpp  pet_param.hpp  pet_proposal.hpp  pet_state.hpp
example/pet/src/: pet_is.cpp  pet_pmcmc.cpp  pet_smc.cpp
example/pf/: CMakeLists.txt  README.md  pf.R  pf_cl.cl  pf_cv.R  pf_cv.truth
example/pf/include/: pf.hpp  pf_cl.hpp  pf_cv.hpp  pf_matrix.hpp  pf_matrix_mpi.hpp  pf_mpi_do.hpp  pf_smp.hpp  pf_smp_do.hpp  pf_smp_main.hpp  pf_tuple.hpp  pf_tuple_mpi.hpp
example/pf/src/: pf.cpp  pf_cl.cpp  pf_core.cpp  pf_cv.cpp  pf_matrix.cpp  pf_matrix_mpi.cpp  pf_mpi.cpp  pf_seq.cpp  pf_smp.cpp  pf_tbb.cpp  pf_tuple.cpp  pf_tuple_mpi.cpp
example/resample/: CMakeLists.txt
example/resample/include/: resample_index.hpp  resample_test.hpp  resample_transform.hpp
example/resample/src/: resample_index.cpp  resample_transform.cpp
example/rng/: CMakeLists.txt  README.md  rng_cl.R  rng_cl.cl  rng_engine_kat_AES256.txt  rng_engine_kat_Philox2x32.txt  rng_engine_kat_Philox2x64.txt  rng_engine_kat_Philox4x64.txt  rng_engine_kat_Threefry16x64.txt  rng_engine_kat_Threefry2x32.txt  rng_engine_kat_Threefry4x32.txt  rng_engine_kat_Threefry8x64.txt  rng_kat_AES128x4.txt  rng_kat_AES128x4_64.txt  rng_kat_AES192x1_64.txt  rng_kat_AES192x4.txt  rng_kat_AES256_4x64.txt  rng_kat_AES256x2.txt  rng_kat_ARS_4x32.txt  rng_kat_ARS_8x64.txt  rng_kat_Philox4x32.txt  rng_kat_Threefry2x64.txt  rng_kat_Threefry4x64.txt
example/rng/include/: rng_aes_validation.hpp  rng_cl.hpp  rng_common.hpp  rng_discard.hpp  rng_dist.hpp  rng_distribution.hpp  rng_distribution_perf.hpp  rng_engine.hpp  rng_gof.hpp  rng_ks.hpp  rng_mkl.hpp  rng_mkl_brng.hpp  rng_output_data.hpp  rng_output_data_hdf5.hpp  rng_test.hpp  rng_testu01.hpp  rng_u01.hpp  rng_u01_sequence.hpp  rng_uniform_bits.hpp  rng_validation.hpp
example/rng/src/: rng_aes.cpp  rng_aes_testu01.cpp  rng_aes_validation.cpp  rng_ars.cpp  rng_ars_testu01.cpp  rng_ars_validation.cpp  rng_beta.cpp  rng_cauchy.cpp  rng_chi_squared.cpp  rng_cl.cpp  rng_discard.cpp  rng_dist.cpp  rng_distribution.cpp  rng_distribution_perf.cpp  rng_engine.cpp  rng_exponential.cpp  rng_extreme_value.cpp  rng_fisher_f.cpp  rng_gamma.cpp  rng_gof.cpp  rng_gsl.cpp  rng_gsl_testu01.cpp  rng_ks.cpp  rng_laplace.cpp  rng_levy.cpp  rng_logistic.cpp  rng_lognormal.cpp  rng_mkl.cpp  rng_mkl_brng.cpp  rng_mkl_testu01.cpp  rng_normal.cpp  rng_pareto.cpp  rng_philox.cpp  rng_philox_testu01.cpp  rng_philox_validation.cpp  rng_r123.cpp  rng_r123_testu01.cpp  rng_rayleigh.cpp  rng_rdrand.cpp  rng_rdrand_testu01.cpp  (+13 more)
example/utility/: CMakeLists.txt
example/utility/include/: utility_aligned_memory.hpp  utility_cstring.hpp  utility_cstring_memcpy.hpp  utility_cstring_memmove.hpp  utility_cstring_memset.hpp  utility_hdf5.hpp  utility_hdf5io.hpp
example/utility/src/: cpuid_info.cpp  utility_aligned_memory.cpp  utility_cstring_memcpy.cpp  utility_cstring_memmove.cpp  utility_cstring_memset.cpp  utility_hdf5.cpp  utility_hdf5io.cpp
example/vsmc/: CMakeLists.txt  README.md
example/vsmc/src/: vsmc.cpp
lib/: CMakeLists.txt
lib/include/: libvsmc.hpp  libvsmcrng.hpp  vsmc_rng_cast.hpp
lib/src/: vsmc_memory.cpp  vsmc_mkl_brng.cpp  vsmc_random.cpp  vsmc_resample.cpp  vsmc_rng.cpp  vsmc_rng_cast.hpp
lib/src/core/: core.cpp  monitor.cpp  particle.cpp  sampler.cpp  state_matrix.cpp  weight.cpp
lib/src/resample/: resample.cpp
lib/src/rng/: bernoulli_rand.cpp  binomial_rand.cpp  discrete_rand.cpp  distribution.cpp  engine.cpp  geometric_rand.cpp  mkl_brng.cpp  negative_binomial_rand.cpp  normal_mv_rand.cpp  poisson_rand.cpp  rand.cpp  rand_64.cpp  rand_arcsine.cpp  rand_bernoulli.cpp  rand_beta.cpp  rand_binomial.cpp  rand_binomial_64.cpp  rand_cauchy.cpp  rand_chi_squared.cpp  rand_discrete.cpp  rand_discrete_64.cpp  rand_exponential.cpp  rand_extreme_value.cpp  rand_fisher_f.cpp  rand_gamma.cpp  rand_geometric.cpp  rand_geometric_64.cpp  rand_laplace.cpp  rand_levy.cpp  rand_logistic.cpp  rand_lognormal.cpp  rand_negative_binomial.cpp  rand_negative_binomial_64.cpp  rand_normal.cpp  rand_normal_mv.cpp  rand_pareto.cpp  rand_poisson.cpp  rand_poisson_64.cpp  rand_rayleigh.cpp  rand_student_t.cpp  (+31 more)
lib/src/smp/: backend_omp.cpp  backend_seq.cpp  backend_std.cpp  backend_tbb.cpp  smp.cpp
lib/src/utility/: aligned_memory.cpp  covariance.cpp  hdf5.cpp  hdf5io.cpp  program_option.cpp  progress.cpp  stop_watch.cpp  (+1 more)
(+2185 files in other folders)
